--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -2,13 +2,18 @@ body,
 html {
   height: 100%;
   margin: 0;
+  padding: 0;
 }
 
 .container {
+  display: grid;
+  grid-template-columns: repeat(5,19.3%);
+  grid-template-rows: repeat(10,9.8%);
   text-align: center;
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+  gap: 15px;
 }
 
 .container div {
@@ -22,26 +27,36 @@ html {
 
 .header {
   background-color: #006157;
+  grid-column: 1 / 6;
+  grid-row: 1 / 2;
 }
 
 .sidebar {
   background-color: #005B94;
+  grid-column: 1 / 2;
+  grid-row: 2 / 9;
 }
 
 .nav {
   background-color: #642cde;
+  grid-column: 2 / 6;
+  grid-row: 2 / 3;
 }
 
 .article {
   background-color: #7E1DC3;
+  grid-column: 2 / 6;
+  grid-row: 3 / 9;
 }
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1 / 6;
+  grid-row: 9 / 10;
 }
 
 .article p {
-  font-size: 18px;
+  font-size: 85%;
   font-family: sans-serif;
   color: white;
   text-align: left;
