--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -4,28 +4,48 @@
 }
 
 .container {
+  display: grid;
   text-align: center;
+  grid-template-columns: 1fr 4fr;
+  gap: 4px;
 }
 
 .container div {
-  padding: 15px;
+  padding: 12px;
   font-size: 32px;
   font-family: Helvetica;
   font-weight: bold;
   color: white;
+
 }
 
 .header {
   background-color: #393f4d;
-}
+  grid-column: 1 / 3;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
 
+}
+.logo {
+  justify-self: start;
+}
 .menu ul,
 .menu li {
   font-size: 16px;
 }
+.menu {
+  align-self: center;
+}
+.menu ul {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
 
 .sidebar {
   background-color: #C50208;
+  display: grid;
+  grid-row: 2 / 4;
+  gap: 50px;
 }
 
 .sidebar .photo {
@@ -48,6 +68,11 @@
   background-color: #C50208;
 }
 
+.nav ul {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
 .nav ul li {
   font-size: 16px;
   text-transform: uppercase;
@@ -55,6 +80,10 @@
 
 .article {
   background-color: #bccbde;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 15px;
+
 }
 
 .article p {
@@ -68,6 +97,7 @@
   background-color: #FFFFFF;
   color: black;
   text-align: center;
+  height: 229px;
 }
 
 .card p {
@@ -83,9 +113,14 @@
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1 / 3;
 }
 
 .footer p {
   font-size: 13px;
   font-weight: normal;
+}
+
+li {
+  list-style-type: none;
 }
